--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.5.1"
-polars = { version = "0.38.3", features = ["lazy", "parquet"] }
+polars = { version = "0.38.3", features = ["lazy", "parquet", "json", "pivot", "concat_str", "strings"] }
 serde = {version = "1.0.197", features = ["derive"]}
