--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2021"
 actix-web = "4.5.1"
 polars = { version = "0.38.3", features = ["lazy", "parquet", "json", "pivot", "concat_str", "strings"] }
 serde = {version = "1.0.197", features = ["derive"]}
+
+[profile.release]
+cogegen-units = 1
+lto = "fat"
+panic = "abort"
