--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,5 +3,5 @@ cmds = [
     "mkdir -p bin/data",
     "cargo build --release --target x86_64-unknown-linux-musl",
     "cp target/x86_64-unknown-linux-musl/release/lppi-data-hub-api bin",
-    "cp data/processed_2022.parquet bin/data/processed_2022.parquet",
+    "cp data/processed_2022.parquet bin/data",
 ]
